--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "utcluj-back",
+  "name": "yt-dlp-service",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "yt-dlp-service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node yt-dlp-service.js"
   },
   "repository": {
     "type": "git",
